syntax = "proto3";

option go_package = "protobuf/compiled";

service CheckoutService {
  rpc CreateOrder (OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  int32 user_id = 1;
  repeated int32 product_ids = 2;
}

message OrderResponse {
  int32 order_id = 1;
  string status = 2;
}
